--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center mt-2em">
+<div class="container text-center mt-2em"  *ngIf="dataNovedad != null">
   <div class="text-right">
     <a routerLink="/contratosModificacionesContractuales" mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar">
@@ -7,11 +7,16 @@
 
   <div class="text-center">
     <h1 class="title-menu--h1">
-      Gestonar solicitud 000003
+      <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+          Ver detalle solicitud {{ dataNovedad.numeroSolicitud }}
+      </ng-container>
+      <ng-template #noEsVerDetalle>
+          Gestionar solicitud {{ dataNovedad.numeroSolicitud }}
+      </ng-template>  
     </h1>
   </div>
   <div class="text-center flex">
-    <p class="color-titulo mr-right-8em">Fecha de solicitud: <b>19/06/2020</b></p>
+    <p class="color-titulo mr-right-8em">Fecha de solicitud: <b>{{ dataNovedad.fechaCreacion | date: 'dd/MM/yyyy' }}</b></p>
     <p class="color-titulo"><b>Modificación contractual</b></p>
   </div>
   <div align="left">
@@ -19,8 +24,8 @@
       <mat-card-content>
         <p><b>Número de comité técnico</b>: CT_0016</p>
         <p><b>Fecha de comité técnico</b>: 12/06/2020</p>
-        <p><b>Número de comité fiduciario</b>: CF_0019</p>
-        <p><b>Fecha de comité fiduciario</b>: 18/06/2020</p>
+        <p><b>Número de comité fiduciario</b>: {{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario.numeroComite }}</p>
+        <p><b>Fecha de comité fiduciario</b>: {{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario.fechaOrdenDia | date: 'dd/MM/yyyy' }}</p>
       </mat-card-content>
   </mat-card>
   </div>
@@ -36,9 +41,9 @@
         <div align="left">
           <mat-card class="border">
             <mat-card-content>
-              <p><b>Nombre del contratista</b>: Constructora Colpatria</p>
-              <p><b>Tipo de identificación</b>: NIT</p>
-              <p><b>Número de identificación</b>: 900.675.987-4</p>
+              <p><b>Nombre del contratista</b>: {{ dataNovedad.contrato.contratacion.contratista.nombre }}</p>
+              <p><b>Tipo de identificación</b>: {{ dataNovedad.contrato.contratacion.contratista.tipoIdentificacionNotMapped }}</p>
+              <p><b>Número de identificación</b>: {{ dataNovedad.contrato.contratacion.contratista.numeroIdentificacion }}</p>
             </mat-card-content>
           </mat-card>
         </div>
@@ -55,10 +60,11 @@
         <div align="left">
           <mat-card class="border">
             <mat-card-content>
-              <p><b>Tipo de contrato</b>: Obra</p>
-              <p><b>Valor del contrato</b>: $30.000.000</p>
-              <p><b>Plazo</b>: 12 meses / 20 días</p>
-            </mat-card-content>
+              <p><b>Tipo de contrato</b>: {{ dataNovedad.contrato.contratacion.tipoSolicitudCodigo === '2' ? 'Interventoria' : 'Obra' }}</p>
+              <p><b>Valor del contrato</b>: {{ dataNovedad.contrato.contratacion.disponibilidadPresupuestal[0].valorSolicitud | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+              <p><b>Plazo</b>: {{ dataNovedad.contrato.contratacion.disponibilidadPresupuestal[0].plazoMeses }} meses /
+                {{ dataNovedad.contrato.contratacion.disponibilidadPresupuestal[0].plazoDias }} días</p>
+          </mat-card-content>
           </mat-card>
         </div>
 
@@ -88,13 +94,31 @@
     </mat-accordion>
   </div>
 
-  <div class="mt-2em" align="left">
+  <div class="mt-2em" align="left" *ngIf="!esVerDetalle">
     <mat-card class="border">
       <mat-card-title class="text-area-quill--label">Registrar trámite</mat-card-title>
       <mat-card-content class="mt-2em">
-        <p><b>Fecha del trámite</b> <span class="color-titulo ml-1em">20/06/2020</span></p>
-        <p><b>Número del contrato</b> <span class="color-titulo ml-1em">A886675445</span></p>
+        <p><b>Fecha del trámite</b>: {{ dataNovedad.contrato.contratacion.fechaTramite | date: 'dd/MM/yyyy' }}</p>
+        <p><b>Número del contrato</b>: {{ dataNovedad.contrato.numeroContrato }}</p>
+        <p><b>Modalidad del contrato</b>: <span *ngIf="modalidadContrato != null">{{ modalidadContrato }}</span></p>
         <app-form-registro-modificacion-contractual [dataFormulario]="formModificacionContractual"></app-form-registro-modificacion-contractual>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="mt-2em" align="left" *ngIf="esVerDetalle">
+    <mat-card class="border">
+      <mat-card-title class="text-area-quill--label">Datos del trámite</mat-card-title>
+      <mat-card-content class="mt-2em">
+        <p><b>Fecha del trámite</b>: {{ dataNovedad.contrato.contratacion.fechaTramite | date: 'dd/MM/yyyy' }}</p>
+        <p><b>Número del contrato</b>: {{ dataNovedad.contrato.numeroContrato }}</p>
+        <p><b>Modalidad del contrato</b>: <span *ngIf="modalidadContrato != null">{{ modalidadContrato }}</span></p>
+        <p><b>Número de otrosí </b>: {{ dataNovedad.numeroOtroSi }}</p>
+        <p><b>Fecha de envío para firma del contratista</b>: {{ dataNovedad.fechaEnvioFirmaContratista | date: 'dd/MM/yyyy' }}</p>
+        <p><b>Fecha de firma por parte del contratista</b>: {{ dataNovedad.fechaFirmaContratista | date: 'dd/MM/yyyy' }}</p>
+        <p><b>Fecha de envío para la firma de la fiduciaria</b>: {{ dataNovedad.fechaEnvioFirmaFiduciaria | date: 'dd/MM/yyyy' }}</p>
+        <p><b>Fecha de firma por parte de la fiduciaria</b>: {{ dataNovedad.fechaFirmaFiduciaria | date: 'dd/MM/yyyy' }}</p>
+        <p><b>Observaciones</b>: <span class="text-justify" [innerHTML]="dataNovedad.observacionesTramite"></span></p>
+        <p><b>Url con soporte</b>: {{ dataNovedad.urlDocumentoSuscrita }}</p>
       </mat-card-content>
     </mat-card>
   </div>
