--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
@@ -85,30 +85,34 @@
         </mat-expansion-panel-header>
 
         <div align="left">
-          <mat-card class="border" *ngFor="let element of data">
+          <mat-card class="border">
             <mat-card-content>
-              <p><b>Número de la solicitud de modificación</b>: {{ element.numeroSolicitud }}</p>
+              <p><b>Número de la solicitud de modificación</b>: {{ dataNovedad.numeroSolicitud }}</p>
               <p><b>Tipo de modificación</b>: {{ tipoModificacion }}</p>
-              <p><b>Valor después de la modificación</b>: ${{ element.valorDespuesModificacion }}</p>
-              <p><b>Plazo después de la modificación</b>: {{ element.plazoDespuesModificacion }}</p>
-              <p><b>Detalle de la modificación</b>: {{ element.detalle }}</p>
+              <p><b>Valor después de la modificación</b>: </p>
+              <p><b>Plazo después de la modificación</b>: </p>
+              <p><b>Detalle de la modificación</b>: </p>
               <h2 class="card-subTitle back-color">Aportantes</h2>
               
-              <div *ngFor="let aportante of element.aportantes; let i = index">
+              <div *ngFor="let aportante of dataNovedad.novedadContractualAportante; let i = index">
         
                 <div>
                   <h3><b>Aportante {{ i+1 }}</b></h3>
                   <div>
-                    <p><b>Tipo de aportante</b>: {{ aportante.tipoAportante }}</p>
+                    <p><b>Tipo de aportante</b>: </p>
                     <p><b>Nombre del aportante</b>: {{ aportante.nombreAportante }}</p>
-                    <p><b>Valor del aportante al proyecto</b>: ${{ aportante.valorAportanteProyecto }}</p>
+                    <p><b>Valor del aportante al proyecto</b>: {{ aportante.valorAporte | currency: '':'symbol':'3.0' }}</p>
                   </div>
                 </div>
-                <div>
-                  <h3><b>Fuente</b></h3>
-                  <div>
-                    <p><b>Fuente</b>: {{ aportante.fuente }}</p>
-                    <p><b>Valor solicitado de la fuente</b>: ${{ aportante.valorSolicitado }}</p>
+                <div *ngFor="let componente of aportante.componenteAportanteNovedad; let f = index">
+                  <h3><b>Componente {{ componente.nombreTipoComponente }}</b></h3>
+
+                  <div *ngFor="let fuente of componente.componenteFuenteNovedad; let f = index">
+                    <h3><b>Fuente {{ f+1 }}</b></h3>
+                    <div>
+                      <p><b>Fuente</b>: {{ fuente.fuenteFinanciacion.nombreFuente }}</p>
+                      <p><b>Valor solicitado de la fuente</b>: {{ fuente.fuenteFinanciacion.valorFuente | currency: '':'symbol':'3.0' }}</p>
+                    </div>
                   </div>
                 </div>
         
