Fase-2-Paquete-5 fix sequence performance minutes

--- a/asivamosffie.services/Templates/PDF/PerformanceMinute.liquid
+++ b/asivamosffie.services/Templates/PDF/PerformanceMinute.liquid
@@ -109,8 +109,8 @@
       >
         <b>Acta No. </b
         ><i
-          ><span style="color: red"
-            >0001</span
+          ><span 
+            >{{minute.next_value}}</span
           ></i
         >
       </p>
@@ -122,7 +122,7 @@
       <p class="Standard" style="margin-bottom: 0cm; line-height: normal">
         Bogotá,
         <i
-          ><span style="color: red">
+          ><span>
             {{ minute.performances_date }}
           </span></i
         >
