--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -161,20 +161,22 @@
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo adicional días: </strong> {{
                 descripcion.plazoAdicionalDias }}</p>
 
-              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2' || descripcion.tipoNovedadCodigo == '6'">
                 <strong>
-                  Fecha de inicio de la
-                  <span *ngIf="descripcion.tipoNovedadCodigo == '1'">suspensión</span>
-                  <span *ngIf="descripcion.tipoNovedadCodigo == '2'">Prórroga a las Suspensión</span>:
+                  Fecha de inicio
+                  <span *ngIf="descripcion.tipoNovedadCodigo == '1'">de la suspensión</span>
+                  <span *ngIf="descripcion.tipoNovedadCodigo == '2'">de la Prórroga a las Suspensión</span>
+                  <span *ngIf="descripcion.tipoNovedadCodigo == '6'">del Reinicio</span>:
                   </strong
                 >
                 {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}
               </p>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2' || descripcion.tipoNovedadCodigo == '6'">
                 <strong>
-                  Fecha final de la
-                  <span *ngIf="descripcion.tipoNovedadCodigo == '1'">suspensión</span>
-                  <span *ngIf="descripcion.tipoNovedadCodigo == '2'">Prórroga a las Suspensión</span>:
+                  Fecha final
+                  <span *ngIf="descripcion.tipoNovedadCodigo == '1'">de la suspensión</span>
+                  <span *ngIf="descripcion.tipoNovedadCodigo == '2'">de la Prórroga a las Suspensión</span>
+                  <span *ngIf="descripcion.tipoNovedadCodigo == '6'">del Reinicio</span>:
                 </strong>
                 {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
               </p>
