Debug PQT4 V18 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -58,7 +58,7 @@
                                                         </mat-card-title>
                                                         <div [formGroup]="discount">
                                                             <p><b>Tipo de descuento: </b> {{ firstLetterUpperCase( getDescuento( discount.get( 'tipoDescuento' ).value ) ) }} </p>
-                                                            <p><b>Valor del descuento: </b> {{ discount.get( 'tipoDescuento' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
+                                                            <p><b>Valor del descuento: </b> {{ discount.get( 'valorDescuento' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
                                                         </div>
                                                     </div>
                                                 </div>
