--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -141,8 +141,10 @@
             </mat-card-header>
             <mat-card-content>
               <strong>Motivos de la novedad:</strong>
-              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo;"> {{
-                motivo.nombreMotivo}}, </section>
+              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo; let i = index">
+                {{ motivo.nombreMotivo
+                }}<span *ngIf="i + 1 !== descripcion.novedadContractualDescripcionMotivo.length">,</span>
+               </section>
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
               <section [innerHTML]="descripcion.resumenJustificacion"></section>
