--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -159,8 +159,9 @@
             </mat-card-header>
             <mat-card-content>
               <strong>Motivos de la novedad:</strong>
-              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo">
-                {{ motivo.nombreMotivo }},
+              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo; let i = index">
+                {{ motivo.nombreMotivo
+                }}<span *ngIf="i + 1 !== descripcion.novedadContractualDescripcionMotivo.length">,</span>
               </section>
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
@@ -380,7 +381,7 @@
 
   <mat-card class="shipping-card var-main-gris" *ngIf="novedad.observacionDevolucionTramite">
     <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="header-card--text"> Observacion de gestión y trámite </mat-card-title>
+      <mat-card-title class="header-card--text"> Observaciones del equipo de seguimiento y control </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
