--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
@@ -135,8 +135,9 @@
             </mat-card-header>
             <mat-card-content>
               <strong>Motivos de la novedad:</strong>
-              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo">
-                {{ motivo.nombreMotivo }},
+              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo; let i = index">
+                {{ motivo.nombreMotivo
+                }}<span *ngIf="i + 1 !== descripcion.novedadContractualDescripcionMotivo.length">,</span>
               </section>
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
@@ -174,13 +175,11 @@
               </p>
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
-                <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
-                  <mat-card-title class="header-card--text sub-text"> 
-                    Cláusula {{ i + 1 }}
-                  </mat-card-title>
-                  <p><strong>Cláusula a modificar: </strong> </p>
+                <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index">
+                  <mat-card-title class="header-card--text sub-text"> Cláusula {{ i + 1 }} </mat-card-title>
+                  <p><strong>Cláusula a modificar: </strong></p>
                   <section [innerHTML]="clausula.clausulaAmodificar" style="margin-left: 2em"></section>
-                  <p><strong>Ajuste solicitado a la cláusula: </strong> </p>
+                  <p><strong>Ajuste solicitado a la cláusula: </strong></p>
                   <section [innerHTML]="clausula.ajusteSolicitadoAclausula" style="margin-left: 2em"></section>
                 </section>
               </section>
