--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
@@ -197,7 +197,7 @@
                                       [proyecto]=proyecto
                                       [contrato]=contrato
                                       [novedad]=novedad
-                                      (guardar)="ngOnInit()"
+                                      (guardar)="guardar()"
                                       >
   </app-expansion-panel-interventoria>
   </div>
