--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -79,13 +79,13 @@
       <td mat-cell *matCellDef="let element">
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]"
-          *ngIf="element.estadoCodigo === '10'">
+          *ngIf="(element.estadoCodigo === '10' && element.registroCompletoTramiteNovedades == null) ">
           Registrar revisión jurídica
         </a>
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]"
-          *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17'">
+          *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || (element.estadoCodigo === '10' && element.registroCompletoTramiteNovedades != null)">
           Ver detalle/Editar
         </a>
         
@@ -93,7 +93,9 @@
         (click)="EnviarAComite(element.novedadContractualId)"
         *ngIf="element.estadoCodigo === '17' && 
                element.registroCompletoTramiteNovedades === true &&
-               element.vaComite === true" >
+               element.vaComite === true &&
+               !(element.novedadContractual.deseaContinuar === false && 
+               element.novedadContractual.razonesNoContinuaProceso)" >
           Enviar a comité técnico
         </button>
 
