--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
@@ -1,4 +1,4 @@
-<section class="container text-center">
+<section class="container text-center" *ngIf="detailavailabilityBudget !== undefined">
     <div class="text-right">
         <a routerLink="/generarRegistroPresupuestal" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
@@ -13,7 +13,7 @@
         <span>Estado: <b>{{detailavailabilityBudget?.estadoStr}}</b></span>
     </p>
 </section>
-<section class="container">
+<section class="container" *ngIf="detailavailabilityBudget !== undefined">
     <mat-card class="shipping-card mainGris">
         <mat-card-content>
             <p><strong>Fecha de solicitud: </strong>{{detailavailabilityBudget?.fechaComiteTecnico| date:'dd/MM/yyyy'}}</p>
@@ -71,16 +71,16 @@
                     <mat-card-title class="header-card--text sub-text" >
                         Fuente
                     </mat-card-title>
-                    <div >
+                    <div>
                         <div *ngFor="let fuente of aportante.fuentesFinanciacion;index as ii">
-                            <section *ngIf="fuente.saldo_actual_de_la_fuente_al_guardar !== 0">
+                            <section>
                                 <p>
                                     <strong>Fuente:</strong>
                                     {{fuente.fuente}}
                                 </p>
                             <p>
                                 <strong>Saldo actual de la fuente:</strong>
-                                {{ (fuente.saldo_actual_de_la_fuente_al_guardar !== 0 ? fuente.saldo_actual_de_la_fuente_al_guardar : fuente.saldo_actual_de_la_fuente)  | currency:'':'symbol':'3.0'}}
+                                {{ fuente.saldo_actual_de_la_fuente  | currency:'':'symbol':'3.0'}}
                             </p>
                             <p>
                                 <strong>Valor solicitado de la fuente:</strong>
@@ -99,12 +99,16 @@
                     </div>
                 </div>
             </div>
+            <!--
+            Se comenta el codigo por peticion de Ivonne "No sé tienen que ver observaciones de procesos de devolución de los ddp" 10/05/2021
+
             <div  *ngIf="detailavailabilityBudget?.observacioensCancelacion.length>0">
                 <h2 class="card-subTitle">Observaciones</h2>
                 <div *ngFor="let aportante of detailavailabilityBudget?.observacioensCancelacion; index as i">
                     <div [innerHtml]="aportante.observacion"></div>
                 </div>
             </div>
+            -->
         </mat-card-content>
     </mat-card>
     <mat-accordion>
