--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
@@ -110,7 +110,7 @@
                             Porcentajes de participación
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <app-tabla-porc-participacion-gbftrec></app-tabla-porc-participacion-gbftrec>
+                    <app-tabla-porc-participacion-gbftrec *ngIf="solicitudPago.tablaPorcentajeParticipacion !== undefined && solicitudPago.tablaPorcentajeParticipacion.length > 0" [tablaPorcentajeParticipacion]="solicitudPago.tablaPorcentajeParticipacion"></app-tabla-porc-participacion-gbftrec>
                 </mat-expansion-panel>
             </mat-accordion>
             <mat-accordion>
@@ -120,7 +120,7 @@
                             Información fuente de recursos
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <app-tabla-infofrecursos-gbftrec></app-tabla-infofrecursos-gbftrec>
+                    <app-tabla-infofrecursos-gbftrec *ngIf="solicitudPago.tablaInformacionFuenteRecursos !== undefined && solicitudPago.tablaInformacionFuenteRecursos.length > 0" [tablaInformacionFuenteRecursos]="solicitudPago.tablaInformacionFuenteRecursos"></app-tabla-infofrecursos-gbftrec>
                 </mat-expansion-panel>
             </mat-accordion>
             <mat-accordion>
@@ -130,37 +130,8 @@
                             Tercero de causación
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <mat-card class="shipping-card var-main-gris">
-                        <mat-card-content align="left">
-                            <p><strong>Número de identificación del contratista: </strong><em>900.879.765-2</em></p>
-                            <p><strong>Nombre de contratista: </strong><em>Interventores S.A.</em></p>
-                            <p><strong>Número de factura: </strong><em>FAC00456</em></p>
-                        </mat-card-content>
-                    </mat-card>
-                    <p class="info-sub-title textoGrisVar">
-                        <span>Valor neto de giro: <em>$15.000.000</em></span>
-                        <span>Nuevo valor resgistrado: <em>$0</em></span>
-                    </p>
-                    <mat-accordion>
-                        <mat-expansion-panel class="expansion-style sub-expansion-black">
-                            <mat-expansion-panel-header class="expansion-style--header">
-                                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                                    Costo variable
-                                </mat-panel-title>
-                            </mat-expansion-panel-header>
-                            <app-form-costo-variable-gbftrec></app-form-costo-variable-gbftrec>
-                        </mat-expansion-panel>
-                    </mat-accordion>
-                    <mat-accordion>
-                        <mat-expansion-panel class="expansion-style sub-expansion-black">
-                            <mat-expansion-panel-header class="expansion-style--header">
-                                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                                    Tipo de pago 3
-                                </mat-panel-title>
-                            </mat-expansion-panel-header>
-                           <app-form-tipo-pago-gbftrec></app-form-tipo-pago-gbftrec>
-                        </mat-expansion-panel>
-                    </mat-accordion>
+
+                    <app-form-tercero-causacion [solicitudPago]="solicitudPago"></app-form-tercero-causacion>
                 </mat-expansion-panel>
             </mat-accordion>
         </mat-expansion-panel>
