--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-infofrecursos-gbftrec/tabla-infofrecursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-infofrecursos-gbftrec/tabla-infofrecursos-gbftrec.component.html
@@ -1,8 +1,8 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="nomAportante">
+        <ng-container matColumnDef="nombreAportante">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del aportante </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.nomAportante }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreAportante }} </td>
         </ng-container>
         <ng-container matColumnDef="fuenteRecursos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente de recursos </th>
@@ -10,11 +10,15 @@
         </ng-container>
         <ng-container matColumnDef="saldoActualFRecursos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual fuente de recursos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoActualFRecursos }} </td>
+            <td mat-cell *matCellDef="let element" align="center">
+                {{ element.saldoActual | currency:'':'symbol-narrow':'.0-0' }}
+            </td>
         </ng-container>
-        <ng-container matColumnDef="saldoAfectado">
+        <ng-container matColumnDef="saldoValorFacturado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por el valor facturado </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoAfectado }} </td>
+            <td mat-cell *matCellDef="let element" align="center">
+                {{ element.saldoAfectado | currency:'':'symbol-narrow':'.0-0' }}
+            </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
