--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
@@ -67,10 +67,9 @@
               <strong>
                 URL con soporte:
               </strong>
-              <a [href]="novedad.urlSoporte"
-              target="_blank" rel="noopener noreferrer">
-              {{ novedad.urlSoporte }}
-            </a>
+              <a class="ruta-url max-width-none" [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
+                {{ novedad.urlSoporte }}
+              </a>
             </p>
           </mat-card-content>
         </mat-card>
