--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -239,7 +239,7 @@
         <mat-card-content>
           <p>
             <strong> URL con soporte: </strong>
-            <a [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
+            <a class="ruta-url max-width-none" [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
               {{ novedad.urlSoporte }}
             </a>
           </p>
