--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
@@ -250,7 +250,7 @@
         <mat-card-content>
           <p>
             <strong> URL con soporte: </strong>
-            <a [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
+            <a class="ruta-url max-width-none" [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
               {{ novedad.urlSoporte }}
             </a>
           </p>
