--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -269,7 +269,7 @@
   </div>
 
   <!-- cuando fue rechazado por interventor -->
-  <mat-card class="shipping-card var-main-gris" *ngIf="novedad.estadoCodigo === '9'">
+  <mat-card class="shipping-card var-main-gris" *ngIf="novedad.estadoCodigo === '9' || novedad.estadoCodigo === '7'">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text">
         Causa del rechazo
