--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -57,7 +57,7 @@
               </mat-expansion-panel-header>
               <mat-expansion-panel-header
                 class="expansion-style--header"
-                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.modificacionContractual"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.novedadContractual"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
                   <b
@@ -138,7 +138,7 @@
               </mat-expansion-panel-header>
               <mat-expansion-panel-header
                 class="expansion-style--header"
-                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.modificacionContractual"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.novedadContractual"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
                   <b>Solicitud {{ sesionComite.novedadContractual.numeroSolicitud }} </b>
