Fase-2-Paquete-5 templates and taxes performanes-payments

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-pagos-rendimientos/components/tabla-registrar-pagos-rpr/tabla-registrar-pagos-rpr.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-pagos-rendimientos/components/tabla-registrar-pagos-rpr/tabla-registrar-pagos-rpr.component.html
@@ -1,3 +1,10 @@
+<div style="text-align: center;">
+  <button mat-button color="warn" class="btn-descargar-plantilla mb-1em"
+          (click)="downloadTemplate()">
+          <img src="assets/img/icon/descarga.svg" alt="Descargar" class="btn-descargar-plantilla--img">
+          Descargar plantilla
+  </button>
+</div>
 <div class="tabs--actions">
   <button
     mat-raised-button
