Ajustes de andres

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -176,7 +176,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.Tercero">
+          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.Tercero && aportante.get('nuevoAportante').value">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
